Align address top to Knowledge top fixed

--- a/src/landing/footer.css
+++ b/src/landing/footer.css
@@ -63,7 +63,7 @@ padding: 70px 36px;
         /* font-size: 1.3888888888888888vw; */
         line-height: 23px;
         color: #677171;
-        padding-top: 60px;
+        padding-top: 46px;
 }
 
 .footer-upper-section ul li {
